[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corelyn-sdk"
version = "0.2.0"
description = "Python SDK for Corelyn AI API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Cory Jame", email = "coryjame13@gmail.com"}]
dependencies = ["requests>=2.28", "httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/corelyn/corelyn-sdk"
