[metadata]
name = corelyn-sdk
version = 0.2.2
description = Python SDK for Corelyn AI API
long_description = file: README.md
long_description_content_type = text/markdown
author = Cory Jame
author_email = coryjame13@gmail.com
license = MIT
url = https://github.com/corelyn/corelyn-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.28
    httpx>=0.24
